--- a/examples/basic_realtime_vad.ipynb
+++ b/examples/basic_realtime_vad.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "cbffd153",
+   "metadata": {},
+   "source": [
+    "© 2025, Stefan Webb. Some Rights Reserved.\n",
+    "\n",
+    "Except where otherwise noted, this work is licensed under a\n",
+    "[Creative Commons Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)](https://creativecommons.org/licenses/by-sa/4.0/deed.en)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ec6477e",
    "metadata": {},
    "source": [
